--- a/FoodPin/Storyboard/Base.lproj/Main.storyboard
+++ b/FoodPin/Storyboard/Base.lproj/Main.storyboard
@@ -108,8 +108,30 @@
                             </connections>
                         </barButtonItem>
                     </navigationItem>
+                    <connections>
+                        <outlet property="emptyRstaurantView" destination="ttr-Ks-bkC" id="H4J-nw-0js"/>
+                    </connections>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="h7G-MP-aAb" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+                <view contentMode="scaleToFill" id="ttr-Ks-bkC">
+                    <rect key="frame" x="0.0" y="0.0" width="414" height="600"/>
+                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                    <subviews>
+                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="empty" translatesAutoresizingMaskIntoConstraints="NO" id="JOp-q8-Bw5">
+                            <rect key="frame" x="28" y="144" width="358" height="398.5"/>
+                            <constraints>
+                                <constraint firstAttribute="width" secondItem="JOp-q8-Bw5" secondAttribute="height" multiplier="80:89" id="1cD-HO-kNe"/>
+                            </constraints>
+                        </imageView>
+                    </subviews>
+                    <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                    <constraints>
+                        <constraint firstItem="Ghk-YR-kwL" firstAttribute="trailing" secondItem="JOp-q8-Bw5" secondAttribute="trailing" constant="28" id="cZV-3E-icJ"/>
+                        <constraint firstItem="JOp-q8-Bw5" firstAttribute="leading" secondItem="Ghk-YR-kwL" secondAttribute="leading" constant="28" id="cln-g7-YAH"/>
+                        <constraint firstItem="JOp-q8-Bw5" firstAttribute="top" secondItem="Ghk-YR-kwL" secondAttribute="top" constant="100" id="joX-bf-V2r"/>
+                    </constraints>
+                    <viewLayoutGuide key="safeArea" id="Ghk-YR-kwL"/>
+                </view>
             </objects>
             <point key="canvasLocation" x="363.768115942029" y="-229.01785714285714"/>
         </scene>
@@ -764,6 +786,7 @@
         <image name="angry" width="78" height="103"/>
         <image name="arrow.down.doc" catalog="system" width="115" height="128"/>
         <image name="cool" width="78" height="83"/>
+        <image name="empty" width="310" height="372"/>
         <image name="happy" width="78" height="86"/>
         <image name="heart-tick" width="22" height="21"/>
         <image name="love" width="78" height="82"/>
